--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -76,7 +76,7 @@
     flex-basis: 45%;
     padding: 1.5rem;
     text-align: left;
-    color: inherit;
+    color: balck;
     text-decoration: none;
     border: 1px solid #eaeaea;
     border-radius: 10px;
@@ -105,3 +105,25 @@
     height: 1em;
   }
   
+/* Dropdown  */
+/* Home.module.css */
+
+.dropdown {
+  margin-top: 8px;
+  padding: 8px;
+  border: 1px solid #100791;
+  border-radius: 4px;
+  color: black;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+#country-select option{
+  color: black !important;
+}
+
+
+.dropdown:focus {
+  border-color: #0070f3;
+  box-shadow: 0 0 0 2px rgba(0, 112, 243, 0.2);
+}
