--- a/src/app/sweden/favorites/Favorites.module.css
+++ b/src/app/sweden/favorites/Favorites.module.css
@@ -1,17 +1,10 @@
 .container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .innerContainer {
-    flex-grow: 1;
     padding: 1rem;
+    height: 100vh;
   }
   
   .title {
-    font-size: 1.875rem;
-    font-weight: bold;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 2rem;
   }
@@ -32,13 +25,5 @@
     .grid {
       grid-template-columns: repeat(4, 1fr);
     }
-  }
-  
-  .favoritesLink {
-    display: block;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: blue;
-    text-decoration: underline;
   }
   
