--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -1,7 +1,8 @@
 /* Navbar.module.css */
 
 .navbar {
-    background-color: var(--accent-color);
+    background-color: white;
+    color: black;
     padding: 1rem;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -19,7 +20,7 @@
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #fff;
+    color: #090808;
 }
 
 .menu-toggle {
