--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,13 +28,7 @@
 
 body {
   height: 100%;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
 }
 
 @layer utilities {
